# proyecto_digitales_II

./: .gitignore
drivers/: vl53l1_error_codes.h  vl53l1_platform.c  vl53l1_platform.h
interface/digitales_ii_proyecto_esp01/: digitales_ii_proyecto_esp01.ino
interface/esp01/: main.py  test.py
interface/frontend_lidar_digitales/: index.html  package-lock.json  package.json
interface/frontend_lidar_digitales/src/: App.css  App.jsx  axiosInstance.js  index.css  main.jsx
interface/frontend_lidar_digitales/src/components/Auth/: AuthLayout.css  AuthLayout.jsx  (+3 more)
interface/frontend_lidar_digitales/src/hooks/: DeviceContext.jsx  UserContext.jsx
interface/lidar_app/: pyproject.toml
interface/lidar_app/lidar_app/: app.py  data.py  graph.ipynb
interface/lidar_app/lidar_app/assets/: styles.css
interface/matplotlib/: app.py  logger_config.py  main.py  plot.py  requirements.txt  test.ipynb
pcb/footprints/ESP8266-01_ESP-01/: ESP8266-01_ESP-01.kicad_sym  XCVR_ESP8266-01_ESP-01.kicad_mod
pcb/footprints/lpc_design_file/Altium_file_for_LPC845_BRK_RevA/: LPC845_BRK_Board_RevA_JP1_Short.ddb
pcb/lidar_dc_motor_board/: fp-lib-table  lidar_dc_motor_board.kicad_prl  lidar_dc_motor_board.kicad_pro  lidar_dc_motor_board.kicad_sch  sym-lib-table  ~lidar_dc_motor_board.kicad_sch.lck
pcb/lidar_main_board/: lidar_main_board.kicad_pcb  lidar_main_board.kicad_prl  lidar_main_board.kicad_pro  lidar_main_board.kicad_sch
source/: 03_09_24_Trabajo_integrador.c  as6500.c  as6500.h  def.c  def.h  motors.c  motors.h  semihost_hardfault.c  stepper.c  stepper.h  vl53l1x.c  vl53l1x.h
(+36 files in other folders)
