[tool.poetry]
name = "lidar-app"
version = "0.1.0"
description = ""
authors = ["PabloSGomez50 <pablosgomez50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
plotly = "^5.24.1"
dash = "^2.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
